--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,11 @@
   "version": 2,
   "builds": [
     {
-      "src": "index.html",
+      "src": "*.html",
       "use": "@vercel/static"
     },
     {
-      "src": "tasks.html",
+      "src": "public/**",
       "use": "@vercel/static"
     }
   ],
@@ -18,6 +18,10 @@
     {
       "src": "/tasks",
       "dest": "/tasks.html"
+    },
+    {
+      "src": "/public/(.*)",
+      "dest": "/public/$1"
     },
     {
       "src": "/(.*)",
